[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/EspecificosDeNivel/SeleccionNivel/spr_hornetboss_icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menus/SeleccionNivelControl.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Musica/mus_seleccion_nivel.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sprites/EspecificosDeNivel/SeleccionNivel/spr_hornetboss_dead_icon.png" type="Texture" id=4]
[ext_resource path="res://Sprites/EspecificosDeNivel/SeleccionNivel/spr_lizardboss_icon.png" type="Texture" id=5]
[ext_resource path="res://Sprites/EspecificosDeNivel/SeleccionNivel/spr_lizardboss_dead_icon.png" type="Texture" id=6]
[ext_resource path="res://Sprites/EspecificosDeNivel/SeleccionNivel/spr_spiderboss_icon.png" type="Texture" id=7]
[ext_resource path="res://Sprites/EspecificosDeNivel/SeleccionNivel/spr_spiderboss_dead_icon.png" type="Texture" id=8]

[node name="SeleccionNivel" type="Node2D"]
script = ExtResource( 2 )

[node name="BotonNivel1" type="TextureButton" parent="."]
margin_left = 122.248
margin_top = 158.498
margin_right = 186.248
margin_bottom = 222.498
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonNivel2" type="TextureButton" parent="."]
margin_left = 295.788
margin_top = 38.009
margin_right = 359.788
margin_bottom = 102.009
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonNivel3" type="TextureButton" parent="."]
margin_left = 451.588
margin_top = 159.609
margin_right = 515.588
margin_bottom = 223.609
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -2.0
autoplay = true
bus = "Musica"
[connection signal="pressed" from="BotonNivel1" to="." method="_on_BotonNivel1_pressed"]
[connection signal="pressed" from="BotonNivel2" to="." method="_on_BotonNivel2_pressed"]
[connection signal="pressed" from="BotonNivel3" to="." method="_on_BotonNivel3_pressed"]
